adicionando encaminhamento para o scritpt de criptografar

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
       <input class="btn" type="submit" value="copiar" id="btn-copy">
     </section>
   </main>
+  <script src = js/criptografa.js></script>
 </body>
 </html>
