Mudança no ID do input

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
     <section class="msg box">
       <h id="" class = "titulo">Mensagem criptografada:</h>
-      <input class="text-input" type="text" id="msg"></input>
+      <input class="text-input" type="text" id="msg-resultado"></input>
       <input class="btn" type="submit" value="copiar" id="btn-copy">
     </section>
   </main>
