botão de descriptografia adicionado e lógica de criptografia não aceita caracteres especiais

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <section class="form box">
       <form action="">
         <label for="input-texto">Apenas letras minúsculas, sem acento</label>
-        <input class="text-input" type="text" name="input-texto" id="input-principal" placeholder="insira o texto aqui">
-        <button class="btn" type="submit" id="btn-cripto">Criptografar!</button>
-        <input class="btn" type="submit" value="descriptografar!" id="btn-descripto">
+        <input class="text-input" type="text" id="input-principal" placeholder="insira o texto aqui">
+        <button class="btn" type="submit" id="btn-cripto">Criptografar</button>
+        <button class="btn" type="submit" id="btn-descripto">Descriptografar</button>
       </form>
     </section>
   
