adicionado a mensagem de erro, mudando sua classe e id

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main class="main">
     <section class="form box">
       <form action="">
-        <label for="input-texto">Apenas letras minúsculas, sem acento</label>
+        <p class = "invisivel" id = "msg-erro">Não são permitidos caracteres especiais</p>
         <input class="text-input" type="text" id="input-principal" placeholder="insira o texto aqui">
         <button class="btn" type="submit" id="btn-cripto">Criptografar</button>
         <button class="btn" type="submit" id="btn-descripto">Descriptografar</button>
