adicionado o botão de copiar funcionando e copy.js adicionado

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <section class="msg box">
       <h id="" class = "titulo">Mensagem criptografada:</h>
       <input class="text-input" type="text" id="msg-resultado"></input>
-      <input class="btn" type="submit" value="copiar" id="btn-copy">
+      <button class="btn" type="submit" id="btn-copy">Copiar</button>
     </section>
   </main>
   <script src = js/criptografa.js></script>
+  <script src = js/copy.js></script>
 </body>
 </html>
