--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cryptographer</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1 class="titulo">Código Secreto</h1>
+  <h1 class="titulo-esp">Cryptographer</h1>
 
   <main class="main">
-    <section class="form box">
+    <section class="form-box">
       <form action="">
-        <p class = "invisivel" id = "msg-erro">Não são permitidos caracteres especiais</p>
+        <p class = "invisivel" class = "titulo" id = "msg-erro">Não são permitidos caracteres especiais</p>
         <input class="text-input" type="text" id="input-principal" placeholder="insira o texto aqui">
         <button class="btn" type="submit" id="btn-cripto">Criptografar</button>
         <button class="btn" type="submit" id="btn-descripto">Descriptografar</button>
       </form>
     </section>
   
-    <section class="msg box">
+    <section class="msg-box">
       <h id="" class = "titulo">Mensagem criptografada:</h>
       <input class="text-input" type="text" id="msg-resultado"></input>
       <button class="btn" type="submit" id="btn-copy">Copiar</button>
