--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
   </main>
   <script src = js/criptografa.js></script>
   <script src = js/copy.js></script>
+  <script src = js/descriptografa.js></script>
 </body>
 </html>
